--- a/product/templates/home/product.html
+++ b/product/templates/home/product.html
@@ -12,11 +12,46 @@
 {% block body %}
 
 <div>
+    {% load mptt_tags %}
+    <div class = "container">
+        <ul class="root">
+          {% recursetree category %}
+              <li>
+                  <a href="{% url 'category' node.slug %}">{{ node.name }}</a>
+                  {% if not node.is_leaf_node %}
+                      <ul class="children">
+                          {{ children }}
+                      </ul>
+                  {% endif %}
+              </li>
+          {% endrecursetree %}
+        </ul>
+    </div>
+</div>
+
+
+<div id="breadcrumb">
+    <div class="container">
+        <ul class="breadcrumb">
+            <li><a href="/">Home</a></li>
+            <li><a href="/">Products</a></li>         
+        </ul>
+    </div>
+</div>
+
+<div>
     <form method = "get">
         {{ brandFilter.form.as_p }}
         <button class="btn btn-primary" type="submit"> Search </button>
     </form>
 </div>
+
+
+<div>
+    
+
+</div>
+
 <div class="container">
 
     <div class="row">
@@ -78,25 +113,6 @@
     </span>
 </div>
 
-<!--
-<div>
-    {% load mptt_tags %}
-    <div class = "container">
-        <ul class="root">
-          {% recursetree category %}
-              <li>
-                  <a href="{% url 'category' node.slug %}">{{ node.name }}</a>
-                  {% if not node.is_leaf_node %}
-                      <ul class="children">
-                          {{ children }}
-                      </ul>
-                  {% endif %}
-              </li>
-          {% endrecursetree %}
-        </ul>
-    </div>
-</div>
--->
 
 <!--
 <div>
